Esercizio 3 - Versione 3 - Soluzioni

--- a/esercizi/Esercizio 3/versione1.html
+++ b/esercizi/Esercizio 3/versione1.html
@@ -37,7 +37,12 @@
 
     <div class="clear"></div>
 
-    <div class="w33 left">
+    <div class="w66 right">
+        <div class="container">
+            <img src="img/img8.jpg">
+        </div>        
+    </div>
+    <div class="w33 right">
         <div class="container">
             <img src="img/img6.jpg">
         </div>
@@ -45,11 +50,7 @@
             <img src="img/img7.jpg">
         </div>        
     </div>
-    <div class="w66 left">
-        <div class="container">
-            <img src="img/img8.jpg">
-        </div>        
-    </div>
+
 
     <div class="clear"></div>
 </body>
