--- a/esercizi/Esercizio 7/index.html
+++ b/esercizi/Esercizio 7/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Esercizio 5 - Javascript cicli e array</h1>
+    <h1>Esercizio 7 - Lambda Expressions</h1>
     <script src="script.js"></script>
 </body>
 </html>
