--- a/esercizi/Esercizio 9/index.html
+++ b/esercizi/Esercizio 9/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Crivello di Eratostene</h1>
     <form>
         <input type="number" name="n" id="n">
-        <input type="button" value="Calcola" onclick="">
-        <input type="button" value="Cancella" onclick="">
+        <input type="button" value="Calcola" onclick="calcola()">
+        <input type="button" value="Cancella" onclick="cancella()">
     </form>
 
+    <div id="placeholder"></div>
+
+    <div class="footer">2025</div>
+
+    <script src="script.js"></script>
 </body>
 </html>
